examples/bad/hold_break_for_outer.mko
// EXPECT: use of moved
// Labeled break outer from nested for after move poisons post-outer use.
fn consume(t: string) {}

fn main() {
    hold let s = "hi"
    outer: for i in range 2 {
        for j in range 2 {
            if i + j == 0 {
                consume(s)
                break outer
            }
        }
    }
    print(s)
}
